# algorithm-18

cpp/: algorithm.hpp  range.hpp
cpp/algorithm/: find.hpp  for_each.hpp
cpp/range/: begin.hpp  config.hpp  end.hpp  eval_if.hpp  is_array.hpp  is_const.hpp  is_reference.hpp  is_volatile.hpp  range_const_iterator.hpp  range_iterator.hpp  range_mutable_iterator.hpp  remove_const.hpp  wrap.hpp  yes_no_type.hpp
lib/algorithm/: CMakeLists.txt  adjacent_find.cpp  find.cpp  find_end.cpp  find_first_of.cpp  find_if.cpp  for_each.cpp
