Project( algorithm )

include_directories( "../../" )
SET( EXECUTABLE_OUTPUT_PATH "../../bin" )

add_executable( adjacent_find adjacent_find.cpp )
add_executable( find find.cpp )
add_executable( find_end find_end.cpp )
add_executable( find_first_of find_first_of.cpp )
add_executable( find_if find_if.cpp )
add_executable( for_each for_each.cpp )
